# eva4-2

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
.github/workflows/: main.yml
frontend/: Makefile  pelicanconf.py  publishconf.py  tasks.py
frontend/articles/: week1.md  week3_facemask.md
template/: __init__.py  data_loader.py  faceblendcommon.py  find_mean_stddev.py  lr_finder.py  train.py  utils.py  visualization.py
week1/: .gitignore  ReadMe.md  get_models_to_s3.py  handler.py  imagenet.py  package-lock.json  package.json  requirements.txt  serverless.yml
week1/data/: imagenet1000_clsidx_to_labels.json
week13/: Speech_to_Text.ipynb  audio_process.ipynb  speech_end_to_end.ipynb
week2/: mobilevnet2_transfer_learning.ipynb
week2/Modules/: __init__.py  data_loader.py  test_train_csvGen.py  train.py  utils.py  visualization.py
week2/experiment/: EVA4_S2_mobilnet_v2_transfer_learning_v4b.ipynb  EVA4_S2_mobilnet_v2_transfer_learning_v4c.ipynb  ReadMe.txt  TinyImageDataSet.py  TinyImageProcessor.py  download_extract.py  mobilevnet2_transfer_learning.ipynb  resnet18_transfer_learning.ipynb  transfer_learning.ipynb
week3/: EVA4_S3_face_alignment_and_swap.ipynb  README.md
week4/: EVA4_P2_S4_Face_Recognition_v2.ipynb  README.md  Trial1.ipynb  face_recognition_clsidx_to_labels.csv
week4/deployment/: handler.py  package-lock.json  package.json  requirements.txt  serverless.yml
week4/models/: create_data.py  inception_adder.py  inception_resnet_v1.py  (+1 more)
week5/: HumanPoseEstimation_ONNX_Quant.ipynb  ReadMe.md
week6/: nlp6.ipynb
week9/:  nlp6.ipynb  ReadMe.md  ReadMe.txt  nlp1.ipynb  nlp2.ipynb  nlp3.ipynb  nlp4.ipynb  nlp5.ipynb  nlp6.ipynb
(+32 files in other folders)
